--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-inventory = hosts
+inventory = /Users/chandissanayake/config-test/inventory/
 host_key_checking = False
 host_vars_enabled = true
 roles_path = roles/
