--- a/inventory/hosts.ini
+++ b/inventory/hosts.ini
@@ -4,3 +4,8 @@ S1 ansible_host=192.168.1.240 ansible_connection=network_cli ansible_network_os=
 [leaf]
 L1 ansible_host=192.168.1.241 ansible_connection=network_cli ansible_network_os=nxos ansible_user=admin ansible_password=Geezer123!
 L2 ansible_host=192.168.1.242 ansible_connection=network_cli ansible_network_os=nxos ansible_user=admin ansible_password=Geezer123!
+
+[all]
+S1 ansible_host=192.168.1.240 ansible_connection=network_cli ansible_network_os=nxos ansible_user=admin ansible_password=Geezer123!
+L1 ansible_host=192.168.1.241 ansible_connection=network_cli ansible_network_os=nxos ansible_user=admin ansible_password=Geezer123!
+L2 ansible_host=192.168.1.242 ansible_connection=network_cli ansible_network_os=nxos ansible_user=admin ansible_password=Geezer123!
